--- a/index.html
+++ b/index.html
@@ -990,17 +990,17 @@ a4 { font-weight:bold;
 	</div>
 
 <!--방향 -->
-<a href="file:///E:/7%EC%B8%B5%20%EC%98%AC%EB%9D%BC%EA%B0%80%EA%B8%B0/%EA%BC%BC%EB%B0%A9%EB%92%A4/index.html">
+<a href="https://seoojing.github.io/jal/">
 	<div id="fronts">
 		<img src="there.png">
 	</div>
 </a>
-<a href="file:///E:/7%EC%B8%B5%20%EC%98%AC%EB%9D%BC%EA%B0%80%EA%B8%B0/%EA%BC%BC%EB%B0%A9%EC%95%88/index.html">
+<a href="https://seoojing.github.io/dada/">
 	<div id="yoyo">
 		<img src="orhere.png">
 	</div>
 </a>
-<a href="file:///E:/7%EC%B8%B5%20%EC%98%AC%EB%9D%BC%EA%B0%80%EA%B8%B0/cmco%EC%95%9E/index.html">
+<a href="https://seoojing.github.io/comca/">
 	<div id="turn">
 		<img src="turn.png">
 	</div>
