--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ a4 { font-weight:bold;
 
 <div id="musi">
    <a5>
-	<MARQUEE width="300" height="50" scrollamount="3">The Age Of Wood - Savfk</MARQUEE>
+	<MARQUEE width="300" height="50" scrollamount="3">Alexander Nakarada - Burt's Requiem</MARQUEE>
 	<!-- 크기 조절 -->
     </a5>
 </div>
